# Courses

./: .gitignore
Hello world/: CMakeLists.txt  main.c
Hello world/01-basics/: C1.c  C2.c  C3.c  C4.c  C5.c  C6.c  CMakeLists.txt  GCD.c  H1.c  H2.c  H3.c  H4.c  H5.c  H6.c  H7.c  STR.c  StackArray.c
Hello world/02-functions/: CMakeLists.txt  PrintF_1.c  PrintF_3.c
Hello world/03-struct/: CMakeLists.txt  Person.c  Person.h  SafeRead.c  SafeRead.h  main.c  mainR.c
Hello world/04-memory/: CMakeLists.txt  Matrix.c  Matrix.h  MatrixMain.c  Vector.c  Vector.h  VectorMain.c  vectorMain.c
Hello world/05-sort/: CMakeLists.txt  Main.c  NaturalMergeSort.c  Sort.h  SortQuick.c  SortSelection.c  SortShaker.c
Hello world/ds-comparison/: CMakeLists.txt  Main.c
Hello world/libutils/: CMakeLists.txt
Hello world/libutils/include/libutils/: AVLTree.h  List.h  Sort.h  Vector.h
Hello world/libutils/src/: AVLTree.c  List.c  NaturalMergeSort.c  SafeRead.c  SortNaturalMerge.c  SortQuick.c  SortSelection.c  SortShaker.c  Vector.c
Hello world/outdated/: CMakeLists.txt
Hello world/outdated/01-basics/: C1.c  C2.c  C3.c  C6.c  H3.c  H4.c  H7.c  StackArray.c  StackVariables.c
Hello world/outdated/03-struct/: CMakeLists.txt  Person.h  SafeRead.c  mainR.c
Hello world/outdated/04-memory/: CMakeLists.txt  Int.c  Matrix.h  VectorMain.c
Hello world/outdated/05-sort/: CMakeLists.txt  Main.c  SortBubble.c  SortNaturalMerge.c  SortSelection.c
Hello world/sort-comparison/: CMakeLists.txt  Main.c
Hello world_sln/: Hello world.sln
Hello world_sln/Hello world/: Hello world.vcxproj
